--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-plumber": "^0.6.1",
     "gulp-util": "^2.2.14",
     "gulp-watch": "^0.6.4",
-    "gulp-connect": "^2.0.5"
+    "gulp-connect": "^2.0.5",
+    "gulp-clean": "^0.2.4"
   }
 }
