--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^2.2.14",
     "gulp-watch": "^0.6.4",
     "gulp-connect": "^2.0.5",
-    "gulp-clean": "^0.2.4"
+    "gulp-clean": "^0.2.4",
+    "lodash": "^2.4.1"
   }
 }
