Added pre and post install commands to package.json

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "gulp-connect": "^2.0.5",
     "gulp-clean": "^0.2.4",
     "lodash": "^2.4.1"
+  },
+  "scripts": {
+      "preinstall": "bower install",
+      "postinstall": "gulp"
   }
 }
