--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
+    "jquery": "~2.1.1",
+    "lodash": "~2.4.1",
+    "moment": "~2.6.0"
   }
 }
