--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Frontend-Previewer ==================",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "bower install",
+    "postinstall": "gulp"
   },
   "repository": {
     "type": "git",
@@ -29,10 +30,7 @@
     "gulp-watch": "^0.6.4",
     "gulp-connect": "^2.0.5",
     "gulp-clean": "^0.2.4",
-    "lodash": "^2.4.1"
-  },
-  "scripts": {
-      "preinstall": "bower install",
-      "postinstall": "gulp"
+    "lodash": "^2.4.1",
+    "bower": "^1.3.3"
   }
 }
