Added install and post install scripts.
Kind of hacky, but it works on windows now too. At least from git bash.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Frontend-Previewer ==================",
   "main": "index.js",
   "scripts": {
-    "postinstall": "bower install; gulp"
+    "install": "bower install",
+    "postinstall": "gulp"
   },
   "repository": {
     "type": "git",
