--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "install": "bower install",
-    "postinstall": "gulp"
+    "postinstall": "gulp",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
